# ascii-term

./: .gitignore  Cargo.toml  README-JA.md  README.md  justfile
.cargo/: config.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
app/ascii-term/: Cargo.toml
app/ascii-term/src/: audio.rs  char_maps.rs  main.rs  player.rs  renderer.rs  terminal.rs
app/ascii-term/src/audio/: decode_loop.rs  mod.rs  player.rs  source.rs
app/ascii-term/src/terminal/: mod.rs  output.rs
app/codec/: Cargo.toml  build.rs
app/codec/src/: errors.rs  lib.rs  media.rs  pipeline.rs
app/codec/src/audio/: decoder.rs  frame.rs  mod.rs  processor.rs
app/codec/src/image/: formats.rs  mod.rs  processor.rs
app/codec/src/video/: decoder.rs  frame.rs  mod.rs
app/downloader/: Cargo.toml
app/downloader/src/: errors.rs  lib.rs  utils.rs  youtube.rs
downloader/: Cargo.toml
downloader/src/: errors.rs  lib.rs  utils.rs  youtube.rs
gallery/: gallery.md
media-core/: Cargo.toml  build.rs
media-core/src/: errors.rs  lib.rs  media.rs  pipeline.rs
media-core/src/audio/: decoder.rs  frame.rs  mod.rs  processor.rs
media-core/src/image/: formats.rs  mod.rs  processor.rs
media-core/src/video/: decoder.rs  frame.rs  mod.rs  processor.rs
scripts/: install_deps.sh
terminal-player/: Cargo.toml
terminal-player/src/: audio.rs  char_maps.rs  main.rs  player.rs  renderer.rs  terminal.rs
xtask/: Cargo.toml
xtask/src/: main.rs  setup.rs
