[workspace]
members = [
    "media-core",
    "terminal-player",
    "downloader"
]

resolver = "3"

[workspace.dependencies]
# FFmpeg関連
ffmpeg-next = "7.1.0"
ffmpeg-sys-next = "7.1.0"

# OpenCV
opencv = { version = "0.94.4", default-features = false, features = ["videoio", "imgproc", "imgcodecs", "clang-runtime"] }

# 画像処理
image = "0.25.6"
fast_image_resize = "5.1.4"

# オーディオ
rodio = "0.20.1"

# 非同期・並行処理
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5.15"
futures-util = "0.3.31"

# ユーティリティ
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

# ターミナル操作
crossterm = "0.29.0"
clap = { version = "4.5.40", features = ["derive"] }

# ファイル操作
tempfile = "3.20.0"
url = "2.5.4"
reqwest = { version = "0.12.20", features = ["blocking", "stream"] }

# 数値計算
num = "0.4.3"

# 動画ダウンローダー
youtube_dl = "0.10.0"
